argocd/applications/manifests/octoprint/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: octoprint
spec:
  selector:
    app: octoprint
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
